--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.detlef.fall2what">
+    package="com.example.detlef.fall2what" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".LaunchActivity">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".LaunchActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,9 +17,10 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
+            android:icon="@mipmap/ic_launcher"
             android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ConnectionActivity"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".ConnectionActivity" />
     </application>
 
 </manifest>
