--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 11 15:19:14 CET 2016
-sdk.dir=C\:\\Users\\Altair07\\Desktop\\Sviluppo\\android-sdk-new
+#Mon Jan 11 19:17:17 CET 2016
+sdk.dir=C\:\\Users\\Detlef\\AppData\\Local\\Android\\sdk
